# project_test

./: pyproject.toml
capitalizers/: Makefile
capitalizers/capitalizer/: func.py
tests/: test_capitalize.py  test_one.py
